feat(API): add search functionality
- add search in articles title and description by keywords
- add search articles by authors
- add search articles by tags
- add test for search feature
- update swagger documentation

[Finished #159987722]
